# 307lib

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  cpp.hint  cppreference-doxygen-web.tag.xml  index.html
TermAPI/: CMakeLists.txt  export.h
TermAPI/ANSI/: CMakeLists.txt
TermAPI/ANSI/include/: Sequence.hpp  winEnableANSI.hpp
TermAPI/ANSI/src/: Sequence.cpp
TermAPI/color/: CMakeLists.txt
TermAPI/color/include/: color-transform.hpp  palette.hpp  setcolor.hpp
TermAPI/color/src/: setcolor.cpp
TermAPI/examples/: color-sync_example.cpp  palette_example.cpp
TermAPI/extensions/: CMakeLists.txt
TermAPI/extensions/include/: color-config.hpp
TermAPI/include/: ANSIDefs.h  CursorOrigin.h  EnableANSI.hpp  FormatFlag.hpp  LineCharacter.hpp  Message.hpp  Segments.h  Sequence.hpp  SequenceDefinitions.hpp  TermAPI.hpp  TermAPIWin.hpp  WinTermAPI.hpp  basic_colors.hpp  color-config.hpp  color-format.hpp  color-sync.hpp  color-transform.hpp  color-values.h  format-functions.hpp  indentor.hpp  palette.hpp  print_at.hpp  print_table.hpp  print_tree.hpp  setcolor.hpp  string_color.hpp  term.hpp  winEnableANSI.hpp  xlog.hpp
TermAPI/packaging/: CMakeLists.txt
TermAPI/src/: EnableANSI.cpp  TermAPI.cpp  color-config.cpp  palette.cpp  term.cpp  xlog.cpp
TermAPI/term/: CMakeLists.txt
TermAPI/term/include/: CursorOrigin.h  Message.hpp  term.hpp  xlog.hpp
TermAPI/term/src/: term.cpp
TermAPI/v3/: CMakeLists.txt
TermAPI/v3/include/: ColorPalette.hpp  Layer.hpp  SequenceDefinitions.hpp  TermAPI.hpp  TermAPIQuery.hpp  color-transform.hpp  color-values.h  format-functions.hpp  setcolor-functions.hpp
TermAPI/v3/src/: setcolor.cpp
TermAPI/v4/: CMakeLists.txt
TermAPI/v4/ANSI/: CMakeLists.txt
TermAPI/v4/ANSI/include/: Segments.h
TermAPI/v4/extensions/: CMakeLists.txt
TermAPI/v4/extensions/include/: xlog.hpp
TermAPI/v4/term/: CMakeLists.txt
TermAPI3/: CMakeLists.txt
docs/: TermAPI.md  TermAPI_v3.md  TermAPI_v4.md  mainpage.md  opt3.md  optlib-argument-parser.md
extra-docs/: mainpage.md
file-lib/: CMakeLists.txt
file-lib/include/: ContainerINI.hpp  INI.hpp  INIContainer.hpp  INIContainerMonoType.hpp  INI_Container.hpp  INI_Parser.hpp  INI_Tokenizer.hpp  LEXEME.h  Token.hpp  TokenParserBase.hpp  TokenizedContainer.hpp  TokenizerBase.hpp  TokenizerINI.hpp  TokenizerJSON.hpp  env.hpp  fileio.hpp  fileutil.hpp
file-lib/include/container/: ContainerINI.hpp  INIContainer.hpp  REContainer.hpp  REParser.hpp
file-lib/include/parser/: INIParser.hpp  INIParserMonoType.hpp
file-lib/include/token/: LEXEME.h  Token.hpp  TokenizedContainer.hpp  TokenizerBase.hpp  TokenizerINI.hpp  TokenizerRE.hpp
file-lib/src/: INI.cpp  fileio.cpp  fileutil.cpp
filelib/: CMakeLists.txt
filelib/include/: INI.hpp  INIRedux.hpp  INI_Parser.hpp  INI_Tokenizer.hpp  Token.hpp  TokenRedux.hpp  TokenReduxDefaultDefs.hpp  env.hpp  envpath.hpp  filei.hpp  fileio.hpp  fileo.hpp  fileutil.hpp  json.hpp  openmode.h  simpleINI.hpp  xfile.hpp
filelib/include/ini/: INI_Tokenizer.hpp  MINI.hpp
filelib/include/json/: JSON.hpp  Node.h  NodeView.h
filelib/include/legacy/token/: TokenizerBase.hpp
filelib/include/xml/: XML.h
filelib/src/: env.cpp  filei.cpp  fileio.cpp  fileo.cpp
filelib/src/json/: JSON.cpp  Node.cpp  NodeView.cpp
filelib/src/xml/: XML.cpp
html/: 307lib_8dox.html  307lib_8dox_source.html  307modules.html  307modules_8md.html  307modules_8md_source.html  _a_n_s_i_2include_2_line_character_8hpp.html  _a_n_s_i_2include_2_line_character_8hpp__incl.map  _a_n_s_i_2include_2_line_character_8hpp__incl.md5  _a_n_s_i_2include_2_line_character_8hpp_source.html  _a_n_s_i_2include_2_sequence_8hpp.html  _a_n_s_i_2include_2_sequence_8hpp.js  _a_n_s_i_2include_2_sequence_8hpp__incl.map  _a_n_s_i_2include_2_sequence_8hpp__incl.md5  _a_n_s_i_2include_2_sequence_8hpp_source.html  _a_n_s_i_defs_8h.html  _a_n_s_i_defs_8h.js  _a_n_s_i_defs_8h__dep__incl.map  _a_n_s_i_defs_8h__dep__incl.md5  _a_n_s_i_defs_8h__incl.map  _arg_8hpp.html  (+4410 more)
opt-lib/: CMakeLists.txt
opt-lib/include/: Arg.hpp  ArgContainer.hpp  ArgParser.hpp  ParamsAPI2.hpp  VariantArgumentType.hpp
optlib/: CMakeLists.txt
optlib/include/: Arg.hpp  ArgContainer.hpp  ArgParser.hpp  Argument.hpp  ArgumentRedux.hpp  CaptureSTDIN.hpp  ParamsAPI2.hpp  VariantArgumentType.hpp  opt3.hpp
optlib/src/: ParamsAPI2.cpp
packaging/: CMakeLists.txt  CMakeLists.txt.in  config.cmake.in
shared/: CMakeLists.txt  cpp.hint  make_exception.hpp  sysarch.h  var.hpp
shared/examples/: event_example.cpp  make_exception_example.cpp
shared/include/: Windows.hpp  WindowsNotToday.h  basic_variant_map.hpp  debug.hpp  env.hpp  envpath.hpp  event.hpp  fixedpoint.hpp  getch.hpp  hasPendingDataSTDIN.h  indentor.hpp  iter.hpp  make_exception.hpp  math.hpp  matrix.hpp  opt3.hpp  optional.hpp  predicate.hpp  process.hpp  procstream.hpp  pseudomatrix.hpp  semver.hpp  strcore.hpp  sysarch.h  unit.hpp  var.hpp  vstring.hpp  xRand.hpp  xlog.hpp
shared/include/str/: charcompare.hpp  strcompare.hpp  strconv.hpp
shared/src/: env.cpp  make_exception.cpp  unit.cpp  var.cpp
str-lib/: CMakeLists.txt  str.hpp  strconcepts.hpp  strconv.hpp  strmanip.hpp  strutility.hpp
str-lib/include/: str.hpp  strconv.hpp  strlocale.hpp  strutility.hpp
str-lib/src/: str.cpp  strutility.cpp
strlib/: CMakeLists.txt
strlib/include/: charcompare.hpp  str.hpp  strcompare.hpp  strconv.hpp  stringify.hpp  strmanip.hpp  strmath.hpp  strregex.hpp  strutility.hpp
testing/: CMakeLists.txt  TermAPI.h  file-lib.h  filelib.h  flagset.hpp  main.cpp  optlib.h  performance.hpp  str-lib.h  test.xml
testing/UnitTests/: CMakeLists.txt
testing/UnitTests/TEST_ArgumentRedux/: ArgumentRedux_Test.cpp  CMakeLists.txt
tokenlib/: CMakeLists.txt
tokenlib/include/: TokenRedux.hpp  TokenReduxDefaultDefs.hpp
tokenlib/src/: TokenRedux.cpp  TokenReduxDefaultDefs.cpp
unit-tests/: CMakeLists.txt  fixtures.hpp  test.cpp
xlog/: CMakeLists.txt
xlog/include/: clogger.hpp  level.hpp  prefix.h  redirect.hpp  xlog.hpp
xlog/src/: xlog.cpp
(+209 files in other folders)
